# Kaggle-Titanic

./: .gitignore  pyproject.toml
titanic/: linreg.py  main.py
